# roasthub

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/api/: service.py
src/github_resume_generator/: crew.py  main.py
src/github_resume_generator/config/: agents.yaml  tasks.yaml
src/github_roaster/: crew.py  main.py
src/github_roaster/config/: agents.yaml  tasks.yaml
src/static/: index.html
